--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ div {
 
 #top {
 	position: relative;
-	background: #00A67C;
+	background: white;
 	height: 50px;
 	z-index:1000;
 	-webkit-box-shadow: 0 2px 3px rgba(0,0,0,.25);
@@ -34,14 +34,15 @@ div {
 
 #logo {
 	float:left;
-	margin-top: 6px;
-	margin-left: 150px;
-	width:277px;
-	height: 37px;
-	background: url('logo.png') no-repeat;
+	margin-top: 8px;
+	width: 255px;
+	height: 34px;
+	background: url('testlogo.png') no-repeat;
 }
 
 #header_inner {
+	margin-left: auto;
+	margin-right:auto;
 	width: 960px;
 }
 
@@ -49,86 +50,136 @@ div {
 	z-index: 1001;
 	float:left;
 	position:relative;
-	width:500px;
+	width:300px;
 	height:50px;
 	text-align: center;
 }
 
 #navcontainer ul{
-	margin-top:8px;
+	margin-top:5px;
 	list-style: none;
 	height:45px;
 }
 
 #navcontainer ul li{
 	display:inline-block;
-	padding: 0 15px 0 15px;
+	padding: 0 10px 0 10px;
 	line-height: 45px;
 }
 
 #navcontainer ul li a{
 	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, sans-serif;
-	color: white;
+	color: black;
 	font-size: 1.1em;
 	font-weight: bold;
 	text-decoration: none;
 }
 
 #navcontainer ul li.active {
-	background: #EBD196;
-	border-top: 1px white solid;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	background: #ED0000;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
 }
+
 
 #navcontainer ul li.active a{
-	color:  black;
-}
-
-#navcontainer ul li.active a:hover{
-	color: black;
-	background:#EBD196;
-	cursor: pointer;
+	color:  white;
 }
 
 #navcontainer ul li a:hover {
 	color:black;
-	background: #00A67C;
+	background: rgba(237,0,0,0);
 	cursor: pointer;
 }
 
+#navcontainer ul li.active a:hover{
+	color:white;
+	background: #ED0000;
+	cursor: pointer;
+
+}
+
+#navcontainer ul li.active:hover{
+	color:white;
+	background: #ED0000;
+	cursor: pointer;
+
+}
+
+#navcontainer ul li:hover {
+	color:black;
+	background: rgba(237,0,0,.1);
+	cursor: pointer;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+
+
+#navcontainer li a { 
+	margin:0px;
+	display:block;
+	height:100%;
+	width:100%;
+}
+
 #maincontainer {
-	height:1000px;
 	position:relative;
+	background-color:#ED0000;
 	-webkit-box-shadow: 0px 2px 3px rgba(0,0,0,.25);
 	-moz-box-shadow: 0px 2px 3px rgba(0,0,0,.25);
 	box-shadow: 0px 2px 3px rgba(0,0,0,.25);
 }
 
 #sidebar {
-	position: relative;
 	float:left;
-	background-color: #BFBFBF;
-	height: 1000px;
+	position:relative;
+	background-color:#A8A8A8;
 	width: 150px;
-	box-shadow: 2px 0px 3px  rgba(0,0,0,.25);
-	z-index:999;
+	z-index:800;
+	min-height: 600px;
 }
 
+#html {
+	overflow-y:scroll;
+}
+
+#maincontentholder {
+	width:810px;
+	float:left;
+	background-color:#ED0000;
+	position:relative;
+	z-index:800;
+	min-height: 600px;
+}
+
+#maincontent {
+
+	margin: 3px 3px 0px 3px;
+	width:804px; 
+	background-color:white;
+	min-height: 597px;
+	-webkit-box-shadow: 2px 2px 3px rgba(0,0,0,.25);
+	-moz-box-shadow: 0px 2px 3px rgba(0,0,0,.25);
+	box-shadow: 0px 2px 3px rgba(0,0,0,.25);
+
+}
 #content{
 	position:relative;
-	height:100%;
-	padding-left: 2px;
-	padding-top: 2px;
-	height:998px;
-	background-color:#EBD196;
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color:white;
+	/*background-color:#ED0000;*/
 	color:white;
 	overflow:hidden;
 	
 	
 }
 #footer {
-	
-	background-color: #00A67C;
+	-webkit-box-shadow: 0px -2px 3px rgba(0,0,0,.25);
+	background-color: black;
+	position:relative;
+	z-index:1001;
 	height:200px;
 }
