--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/twitter/bootstrap/master/js/bootstrap-dropdown.js"></script>
 </head>
 <body>
 <div id = "top">
@@ -13,15 +15,35 @@
 		<div id = "navcontainer">
 			<ul id = "nav">
 				<li class = "active"><a href = "/">Home</a></li>
-				<li ><a href = "/users/">Groups</a></li>
-				<li ><a>My Profile</a></li>
+				<li ><a href = "/users/">Invite</a></li>
+				<li ><a>My Sched</a></li>
 			</ul>
-	</div>
+		</div>
+		<div id = "searchbartop"><input type="text" placeholder = "Search for a group or user" data-provide="typeahead" id = "searchbar">
+			<button type="submit" class="btn">Search</button>
+		</div>
+		<div id = "logintop"><div class="settingsdropdown">
+  <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown"  href="#">
+    Settings
+  </a>
+  <ul class="settingsdropdown-menu" role="menu" aria-labelledby="dLabel">
+   <li><a tabindex="-1" href="#">Logout</a></li>
+  <li><a tabindex="-1" href="#">Test</a></li>
+  <li><a tabindex="-1" href="#">Lol</a></li>
+  </ul>
+</div></div>
 	</div>
 </div>
 <div id = "maincontainer">
 	<div id = "content">
 		<div id = "sidebar">
+			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+  <li><a tabindex="-1" href="#">Action</a></li>
+  <li><a tabindex="-1" href="#">Another action</a></li>
+  <li><a tabindex="-1" href="#">Something else here</a></li>
+  <li class="divider"></li>
+  <li><a tabindex="-1" href="#">Separated link</a></li>
+</ul>
 		</div>
 		<div id = "maincontentholder">
 			<div id = "maincontent">
