--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -7,24 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id = "top">
-	<div id = "header_inner">
-		<a href = "/"><div id = "logo"></div></a>
-		<div id = "navcontainer">
-			<ul id = "nav">
-				<li ><a href = "/">Home</a></li>
-				<li class = "active"><a href = "/users/">Groups</a></li>
-				<li ><a>My Profile</a></li>
-			</ul>
-	</div>
+	<div class = "container">
+	<div class="headerbar">
+		<div class = "headerlogo">lol</div>
+		<div class = "headernav">lol</div>
+		<div class = "headersearch">lol</div>
+		<div class = "headerlogin">lol</div>
 	</div>
 </div>
-<div id = "maincontainer">
-	<div id = "content">
 		<%= yield %>
-	</div>
-</div>
-<div id = "footer">
-</div>
+
 </body>
 </html>
