changed settings button to cog, well for li active

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,7 @@
 		</div>
 		<div id = "logintop"><div class="settingsdropdown">
   <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown"  href="#">
-    Settings
-  </a>
+  <%= image_tag("settings.png", :width => '30') %> </a>
   <ul class="settingsdropdown-menu" role="menu" aria-labelledby="dLabel">
    <li><a tabindex="-1" href="#">Logout</a></li>
   <li><a tabindex="-1" href="#">Test</a></li>
