--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,6 +81,9 @@ div {
 	background: #00AA72;
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,1);
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,1);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,1);
 }
 
 
@@ -151,6 +154,7 @@ a#dLabel{
 	font-weight: bold;
 	text-decoration: none;
 }
+
 
 #maincontainer {
 	position:relative;
