added controller views for embedded schedules

--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -4,6 +4,10 @@
   <b>Userid:</b>
   <%= @schedule.userid %>
 </p>
+<p>
+  <b>Courses:</b>
+  <%= @schedule.courses %>
+</p>
 
 
 <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
