--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -2,18 +2,22 @@
 
 <table>
   <tr>
+    <th>ObjectID</th>
     <th>Userid</th>
+    <th>Courses</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
 
-<% @schedules.each do |schedule| %>
+<% @schedules.keys.each do |userid| %>
   <tr>
-    <td><%= schedule.userid %></td>
-    <td><%= link_to 'Show', schedule %></td>
-    <td><%= link_to 'Edit', edit_schedule_path(schedule) %></td>
-    <td><%= link_to 'Destroy', schedule, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= @schedules[userid].id %></td>
+    <td><%= @schedules[userid].userid %></td>
+    <td><%= @schedules[userid].courses %></td>
+    <td><%= link_to 'Show', @schedules[userid] %></td>
+    <td><%= link_to 'Edit', edit_schedule_path(@schedules[userid]) %></td>
+    <td><%= link_to 'Destroy', @schedules[userid], confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
