--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <th>Email</th>
     <th>Password</th>
     <th>Group_ids</th>
-    <th></th>
+    <th>Schedule</th>
     <th></th>
     <th></th>
   </tr>
@@ -21,6 +21,7 @@
     <td><%= user.email %></td>
     <td><%= user.password %></td>
     <td><%= user.group_ids %></td>
+    <td><%= user.schedule %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
