--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,7 +134,7 @@ div {
 	position:relative ;
 	float:left;
 	text-align:center;
-	width:350px;
+	width:250px;
 	height:50px;
 }
 
@@ -148,6 +148,12 @@ div {
 #searchbar {
 	margin-top:10px;
 	vertical-align: middle;
+}
+
+.icon-search {
+	position:absolute;
+	top:17px;
+	right:23px;
 }
 
 a#dLabel{
