heroku/ mongohq config tests

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,4 +8,7 @@ schedules = {}
 
  %>
 <%= schedules.keys %>
- 
+
+<%= db_config = YAML::load(File.read(File.join(Rails.root, "/config/mongo.yml"))) %>
+
+<%= db_config[Rails.env]['adapter'] %>
