--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,24 +52,45 @@ div {
 	height:50px;
 }
 
+#schoolname {
+	position:relative;
+	width:150px;
+	height:48px;
+	float:left;
+	color:#CC0000;
+	text-align: left;
+	display:inline-block;
+	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, sans-serif;
+	font-weight: bold;
+	font-size: 0.9em;
+	line-height: 45px;
+	margin-top: 5px;
+	display:inline-block;
+}
+
 #navcontainer {
 	z-index: 1001;
 	float:left;
 	position:relative;
-	width:275px;
+	width:140px;
 	height:50px;
+	left:5px;
 	text-align: center;
 }
 
 #navcontainer ul{
+	position:relative;
+	margin: 5px 0 0 0;
 	margin-top:5px;
+	width:140px;
 	list-style: none;
+	text-align:center;
 	height:45px;
 }
 
 #navcontainer ul li{
 	display:inline-block;
-	padding: 0 10px 0 10px;
+	padding: 0 5px 0 5px;
 	line-height: 45px;
 }
 
@@ -131,29 +152,33 @@ div {
 }
 
 #searchbartop {
-	position:relative ;
+	position:relative;
 	float:left;
 	text-align:center;
-	width:250px;
+	width:195px;
+	margin-left:10px;
 	height:50px;
 }
 
 #logintop {
 	float:left;
 	text-align: center;
-	width:80px;
-	height: 50px;
+	width:175px;
+	height:50px;
 }
+
 
 #searchbar {
 	margin-top:10px;
 	vertical-align: middle;
+	padding-right:19px;
+	width:173px;
 }
 
 .icon-search {
 	position:absolute;
 	top:17px;
-	right:23px;
+	right:0px;
 }
 
 a#dLabel{
@@ -357,3 +382,27 @@ select {
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,170,114, 1);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,170,114, 1) !important;
 }
+
+#username {
+	position:relative;
+	width:150px;
+	height:50px;
+	text-align:right;
+	color:black;
+	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, sans-serif;
+	font-weight: bold;
+	font-size: 1.1em;
+	margin-top:5px;
+	line-height: 45px;
+	display:inline-block;
+}
+
+#username span {
+	display: inline-block;
+	max-width:150px;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	white-space: nowrap;
+}
+
+
