--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,5 +36,9 @@
 
 </p>
 
+<p>
+  <b>Avatar</b>
+  <%= image_tag @user.avatar.url(:thumb) %>
+</p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
