--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -31,6 +31,7 @@ html {
 .settingsdropdown-menu {
 	@extend .dropdown-menu;
 	min-width:80px;
+	float:right;
 	text-align:left;
 	top: 110%;
 	left: -3px;
@@ -38,13 +39,11 @@ html {
 
 .settingsdropdown {
 	@extend .dropdown;
-	height:30px;
-	width:30px;
-	line-height:30px;
+	height:45px;
+	line-height:45px;
 	text-align:center;
-	margin-top:10px;
+	margin-top:5px;
 	margin-right:5px;
-
 	float:right;
 }
 
