--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,30 +21,38 @@ usersandgroups.push("Group: " + group.groupid)
 User.all.each {|user|
 usersandgroups.push("User: " + user.firstname + " " + user.lastname)}
 %>
-		<div id = "searchbartop"><input type="text" placeholder = "Search for a group or user" data-provide="typeahead" id = "searchbar"  data-source= '<%= usersandgroups %>' >
-			<div class="icon-search" type = "submit"></div>
+		<div id = "searchbartop"><input type="text" placeholder = "Search for a group or user" data-provide="typeahead" id = "searchbar"  data-source= '<%= usersandgroups %>' />
 		</div>
 
 
-    <div id = "schoolname">
-      
-    </div>
+   
 		<div id = "logintop">
+      <a id = "loginlink" href = "#">
+      <% lol = User.where(:userid => "user8").first %>
+      <div id = "userimage">
+      <%= image_tag lol.avatar.url(:thumb) %>
+    </div>
       <div id  = "username">
-       <span> Danny Shawsdfgdfgsf gsgsgsfsgfs</span>
+       <span> <%= lol.firstname + " " + lol.lastname %></span>
       </div>
+      </a>
       
     </div>
-
+    <!--
     <div id = "navcontainer">
       <ul id = "nav">
         <li><a href = "/">Home</a></li>
         <li ><a href = "/invite/">Help</a></li>
       </ul>
     </div>
+    -->
     <div class="settingsdropdown">
-  <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown"  href="#">
-  <%= image_tag("settings.png", :width => '20') %> </a>
+      <a class = "settingsbut"><i class="icon-calendar icon-2x"></i></a>
+      <a class = "settingsbut"><i class="icon-home icon-2x"></i></a>
+      <!--
+  <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown"  href="#">-->
+  <a class = "settingsbut"><i class="icon-cogs icon-2x"></i></a>
+   <!--</a>-->
   <ul class="settingsdropdown-menu" role="menu" aria-labelledby="dLabel">
    <li><a tabindex="-1" href="#">Logout</a></li>
   <li><a tabindex="-1" href="#">Test</a></li>
@@ -60,12 +68,30 @@ usersandgroups.push("User: " + user.firstname + " " + user.lastname)}
   <div class="accordion-group">
     <div class="accordion-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-       <i class="icon-folder-open"></i> Groups
+       <i class="icon-sitemap icon-large"></i><h2>Headquarters</h2>
       </a>
     </div>
     <div id="collapseOne" class="accordion-body collapse">
       <div class="accordion-inner">
-         <ul class = "groupsidebar">
+         <ul class = "hqsidebar">
+          <% Headquarter.sort(:hqname).each { |hq| %>
+            <li> <%= link_to(Headquarter.where(:hqname => hq.hqname).first) do %><h3><%= hq.hqname %></h3><% end %>
+
+            </li>
+          <% } %>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+        <i class="icon-group icon-large"></i><h2>Groups</h2>
+      </a>
+    </div>
+    <div id="collapseTwo" class="accordion-body collapse">
+      <div class="accordion-inner">
+        <ul class = "groupsidebar">
           <% Group.sort(:groupid).each { |group| %>
             <li> <%= link_to(Group.where(:groupid => group.groupid).first) do %><h3><%= group.groupid %></h3><% end %>
 
@@ -77,11 +103,11 @@ usersandgroups.push("User: " + user.firstname + " " + user.lastname)}
   </div>
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-        <i class="icon-user"></i> Users
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+        <i class = "icon-user icon-large" ></i><h2>Users</h2>
       </a>
     </div>
-    <div id="collapseTwo" class="accordion-body collapse">
+    <div id="collapseThree" class="accordion-body collapse">
       <div class="accordion-inner">
         <ul class = "usersidebar">
         <% User.sort(:firstname).each { |user| %>
@@ -95,24 +121,36 @@ usersandgroups.push("User: " + user.firstname + " " + user.lastname)}
   </div>
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-        <i class = "icon-th-large"></i> Display Options
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+        <i class = "icon-picture icon-large"></i><h2>Display Options</h2>
       </a>
     </div>
-    <div id="collapseThree" class="accordion-body collapse">
+    <div id="collapseFour" class="accordion-body collapse">
       <div class="accordion-inner">
-        Anim pariat Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsfur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf
+        <ul class = "displaysidebar"><h3>
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf</h3>
+      </ul>
       </div>
     </div>
   </div>
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-        <i class = "icon-wrench"></i> Functions
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
+        <i class = "icon-wrench icon-large"></i><h2>Functions</h2>
       </a>
     </div>
-    <div id="collapseFour" class="accordion-body collapse">
+    <div id="collapseFive" class="accordion-body collapse">
       <div class="accordion-inner">
+        <ul class = "functionsidebar"><h3>
         Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
         Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
         Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
@@ -122,7 +160,8 @@ usersandgroups.push("User: " + user.firstname + " " + user.lastname)}
         Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
         Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
         Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
+        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf</h3>
+      </ul>
       </div>
     </div>
   </div>
@@ -137,10 +176,8 @@ usersandgroups.push("User: " + user.firstname + " " + user.lastname)}
 </div>
 <div id = "footer">
 </div>
-<script>
-$(function() {
-  $('input#searchbar').typeahead()
-})
+<script type = "text/javascript">
+
 </script>
 </body>
 </html>
