--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,6 +35,9 @@
     <%= f.label :group_ids %><br />
     <%= f.select :group_ids, Group.all %>
   </div>
+  <div class="field">
+    <%= f.file_field :avatar %>
+  </div>
 
 
 
