--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,7 @@
     <th>Password</th>
     <th>Group_ids</th>
     <th>Schedule</th>
+    <th>Avatar</th>
     <th></th>
     <th></th>
   </tr>
@@ -22,6 +23,7 @@
     <td><%= user.password %></td>
     <td><%= user.group_ids %></td>
     <td><%= user.schedule %></td>
+    <td><%= user.avatar %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
