--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
   <%= @user.userid %>
 </p>
 
+
 <p>
   <b>Firstname:</b>
   <%= @user.firstname %>
@@ -22,7 +23,7 @@
 
 <p>
   <b>Password:</b>
-  <%= @user.password %>
+  <%= @user.encrypted_password %>
 </p>
 
 <p>
