--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,28 @@
-<%
-schedules = {}
-    User.all.each{ |user|
-    if !user.schedule.nil? && !user.schedule.id.nil?
-    schedules[user.schedule.id.to_s] = user.schedule
-    end
-    }
 
- %>
-<%= schedules.keys %>
 
+<h1> Sign Up </h1>
+<br />
 <% User.all.each {|s| s.avatar.reprocess! } %>
-<p> lol </p>
+
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+  
+  <div>
+  <%= f.email_field :email, :placeholder => "Your email", :autofocus => true %></div>
+
+  <div id = "signupnames">
+  <%= f.text_field :firstname, :placeholder => "First name" %>
+  <%= f.text_field :lastname, :placeholder => "Last name" %></div>
+
+  <div>
+  <%= f.password_field :password, :placeholder => "Create a password" %></div>
+
+  <div id = "signupterms"> By clicking on "Sign up for free!" below, you agree to our
+  	<a>Terms of Service</a> and our <a>Privacy Policy</a>.
+  </div>
+
+
+  <div><%= f.submit "Sign up for free!", :class => 'signupsubmit' %></div>
+
+  <div id = "articles"><a style = "float:left">Terms of Service</a><a style = "margin-left:25px">Privacy</a><a style = "float:right">Security</a></div>
+<% end %>
