--- a/app/views/layouts/invite.html.erb
+++ b/app/views/layouts/invite.html.erb
@@ -5,104 +5,80 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
 </head>
 <body>
 <div id = "top">
-	<div id = "header_inner">
-		<a href = "/"><div id = "logo"></div></a>
-		<div id = "navcontainer">
-			<ul id = "nav">
-				<li ><a href = "/">Home</a></li>
-				<li class = "active"><a href = "/invite/">Invite</a></li>
-				<li ><a>My Sched</a></li>
-			</ul>
-		</div>
-		<div id = "searchbartop"><input type="text" placeholder = "Search for a group or user" data-provide="typeahead" id = "searchbar">
-			<button type="submit" class="btn">Search</button>
-		</div>
-		<div id = "logintop"><div class="settingsdropdown">
-  <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown"  href="#">
-  <%= image_tag("settings.png", :width => '30') %> </a>
-  <ul class="settingsdropdown-menu" role="menu" aria-labelledby="dLabel">
-   <li><a tabindex="-1" href="#">Logout</a></li>
-  <li><a tabindex="-1" href="#">Test</a></li>
-  <li><a tabindex="-1" href="#">Lol</a></li>
-  </ul>
-</div></div>
-	</div>
+  <div id = "header_inner">
+    <a href = "/"><div id = "logo"></div></a>  
+    <div id = "signinholder">
+      <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+  <div id = "signin">
+  <%= f.email_field :email,:placeholder => "Email", :autofocus => true %>
+  <%= f.password_field :password, :placeholder => "Password" %>
+  <%= f.submit "Log in", :class => "signinsubmit" %></div>
+
+  <% if devise_mapping.rememberable? -%>
+    <div id = "signinremember"><%= f.check_box :remember_me, :class => "signincheck" %> <div id = "signinrest"><%= f.label "Keep me logged in" %>   <%= render "devise/shared/customlinks" %></div></div>
+  <% end -%>
+
+<% end %>
+    </div>
+  </div>
 </div>
 <div id = "maincontainer">
-	<div id = "content">
-		<div id = "sidebar">
-			<div class="accordion" id="accordion2">
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-        Groups
-      </a>
-    </div>
-    <div id="collapseOne" class="accordion-body collapse">
-      <div class="accordion-inner">
-        Anim pariat Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsfur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf
+  <div id = "content">
+    <div id = "signupcontentholder">
+      <div id = "signupinfo">
+        <div id = "infomain">
+          <p>Create a central location to view schedules.</p>
+          <span>Find common free time and schedule new events with friends!</span>
+        </div>
+        <div id = "infodivider"></div>
+        <div id = "infodetails">
+          <table id = "infodeetstable">
+            <tr>
+                <td>
+                  <i class="icon-sitemap icon-3x"></i>
+                  <span> Join a main network/ headquarters with
+                    others who are similar to you. </span>
+                </td>
+                <td>
+                  <i class="icon-group icon-3x"></i>
+                  <span> Create or join groups where you can invite
+                    members privately and collaboratively schedule. </span>
+                </td>
+            </tr>
+                
+            <tr>
+                <td>
+                  <i class="icon-wrench icon-3x"></i>
+                  <span> Perform functions like finding common free time, adding
+                    events to schedules, and more. </span>
+                </td>
+                <td>
+                  <i class="icon-lock icon-3x"></i>
+                  <span> Set privacy viewing settings for your schedule and
+                    let others see only what you want them to see. </span>
+                </td>
+            </tr>
+          </table>
+        </div>
       </div>
+      <div id = "signup">
+        <div id = "signupparameters">
+      <%= yield %>
+        </div>
+        
     </div>
+    </div>
+    </div>
+    
   </div>
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-        Users
-      </a>
-    </div>
-    <div id="collapseTwo" class="accordion-body collapse">
-      <div class="accordion-inner">
-        Anim pariatur cliche...
-      </div>
-    </div>
-  </div>
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-        Display Options
-      </a>
-    </div>
-    <div id="collapseThree" class="accordion-body collapse">
-      <div class="accordion-inner">
-        Anim pariat Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf Anim pariatur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsfur cliche...sdfgsfdgsfsfgsfgsgfgsfgsfsfgfgsfgsfgsfgsfgsfgsfgsf
-      </div>
-    </div>
-  </div>
-  <div class="accordion-group">
-    <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-        Functions
-      </a>
-    </div>
-    <div id="collapseFour" class="accordion-body collapse">
-      <div class="accordion-inner">
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-        Anim pariat Anim pbob adfadsf asdfasdf adfasdfdf  apraefpas adfadfan adjfkdf
-      </div>
-    </div>
-  </div>
-</div>
-		</div>
-		<div id = "maincontentholder">
-			<div id = "maincontent">
-			<%= yield %>
-			</div>
-		</div>
-	</div>
 </div>
 <div id = "footer">
 </div>
+<script type = "text/javascript">
+
+</script>
 </body>
 </html>
