--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
     <td><%= user.firstname %></td>
     <td><%= user.lastname %></td>
     <td><%= user.email %></td>
-    <td><%= user.password %></td>
+    <td><%= user.encrypted_password %></td>
     <td><%= user.group_ids %></td>
     <td><%= user.schedule %></td>
     <td><%= user.avatar %></td>
